# obsidian_sync

./: .gitignore  CHANGELOG.md  README.md  SETUP_GUIDE.md  code_review.md  config.example.yaml  fix_service_localsystem.bat  install_service.bat  main.py  obsidian-vault-sync-spec.md  pyproject.toml  run_forever.py  step1_evaluation.md  uninstall_service.bat  지침1.md
artifacts/: progress-log.md  sprint-1-done.md  sprint-2-done.md  sprint-3-done.md  sprint-4-done.md  sprint-contract.md
core/: drive_sync.py  watcher.py
docs/: journal.md  new-device-setup.md
docs/architecture/: sync-design.md
hooks/: __init__.py  sync_hook.py
scripts/: cleanup_drive_root_duplicates.py  cleanup_stray_root_files.py
src/: config.py  conflict.py  convergence.py  drive_client.py  drive_vv_codec.py  hash.py  intent_log.py  local_watcher.py  main.py  poller.py  reconciler.py  state.py  sync_engine.py  trash.py  version_vector.py
templates/: INDEX.md  claude-cli-subprocess.md  db-setup.md  deepeval-setup.md  gdrive-watchdog-sync.md  generator-guide.md  journal-guide.md  langfuse-setup.md  langgraph-agent.md  sprint-contract-template.md
tests/: test_config.py  test_conflict.py  test_convergence.py  test_drive_client.py  test_drive_vv_codec.py  test_e2e_smoke.py  test_hash.py  test_integration_watcher_poller.py  test_intent_log.py  test_local_watcher.py  test_main.py  test_poller.py  test_reconciler.py  test_reconciler_v2.py  test_state.py  test_sync_engine.py  test_trash.py  test_version_vector.py
